Formal Languages and Automata Theory/Bloco2 - Introdução ao ANTLR/Exercicios/Ex3c/Calculator.g4
grammar Calculator;

program:
		stat* EOF
		;

stat:
		expr ? NEWLINE
		;

expr:
		expr op=( '*' | '/' | '%' ) expr 	#ExprMultDivMod
    	| expr op=( '+' | '-' ) expr 		#ExprAddSub
    	| sign=( '+' | '-' )? Integer 		#ExprInteger
    	| '(' expr ')' 						#ExprParent
    	;

Integer: [0-9]+; 							// implement with long integers
NEWLINE: '\r' ? '\n';
WS: [ \t]+ -> skip;
COMMENT: '#' .* ? '\n' -> skip;
